新增了动力环境监控页面

--- a/index.html
+++ b/index.html
@@ -128,19 +128,19 @@
                     <ul>
                         <li>
                             <img src="images/index/icon5.png"/>
-                            <p>平均温度<span>24.5℃</span></p>
+                            <a href="envMonitorDetails.html"><p>平均温度<span>24.5℃</span></p></a>
                         </li>
                         <li>
                             <img src="images/index/icon6.png"/>
-                            <p>平均湿度<span>24%</span></p>
+                            <a href="envMonitorDetails.html"><p>平均湿度<span>24%</span></p></a>
                         </li>
                         <li>
                             <img src="images/index/icon7.png"/>
-                            <p>漏水<span>正常</span></p>
+                            <a href="envMonitorDetails.html"><p>漏水<span>正常</span></p></a>
                         </li>
                         <li>
                             <img src="images/index/icon8.png"/>
-                            <p>烟感<span>正常</span></p>
+                            <a href="envMonitorDetails.html"><p>烟感<span>正常</span></p></a>
                         </li>
                     </ul>
                 </div>
