--- a/evaluationResultDetail.html
+++ b/evaluationResultDetail.html
@@ -31,11 +31,11 @@
                 <ul>
                     <li><span>业务系统名称：</span><p>{{objectName}}</p></li>
                     <li><span>当前考评结果：</span><p :class="objectResult==0?'red':'green'">{{objectResult==0?'未达标':'达标'}}</p></li>
-                    <li><a class="btn1">导出报表</a><a class="btn">发送报表</a></li>
+                    <li><a class="btn1" @click="pdfMap(objectName)">导出报表</a><a class="btn">发送报表</a></li>
                 </ul>
             </div>
             <div class="table">
-                <table>
+                <table id="tableCon">
                     <thead>
                     <tr>
                         <th colspan="3"></th>
@@ -165,6 +165,8 @@
 </div>
 </body>
 <script src="js/public.js"></script>
+<script src="js/jspdf.min.js"></script>
+<script src="js/html2canvas.js"></script>
 <script src="js/evaluationResultDetail.js" type="text/babel"></script>
 <script>
     let docHeight = window.innerHeight || document.documentElement.clientHeight;
