--- a/evaluationResultDetail.html
+++ b/evaluationResultDetail.html
@@ -34,7 +34,7 @@
                     <li><a class="btn1" @click="pdfMap(objectName)">导出报表</a><a class="btn">发送报表</a></li>
                 </ul>
             </div>
-            <div class="table">
+            <div class="table" id="table">
                 <table id="tableCon">
                     <thead>
                     <tr>
@@ -44,7 +44,7 @@
                         <th>达标状态</th>
                     </tr>
                     </thead>
-                    <tbody id="table">
+                    <tbody>
                     <tr>
                         <td rowspan="13">业务考评</td>
                         <td rowspan="4">业务健康度</td>
