--- a/evaluationModel.html
+++ b/evaluationModel.html
@@ -17,7 +17,8 @@
     <script src="js/browser.min.js"></script>
     <script src="js/browser-polyfill.min.js"></script>
     <script src="js/vue.js"></script>
-    <script type="text/javascript" src="js/nav.js"></script>
+    <script src="js/public.js"></script>
+    <script type="text/babel" src="js/nav.js"></script>
 </head>
 <body>
 <div id="main">
@@ -291,7 +292,6 @@
         </div>
     </div>
 </div>
-<script src="js/public.js"></script>
 <script src="js/evaluationModel.js" type="text/babel"></script>
 </body>
 </html>
