--- a/report.html
+++ b/report.html
@@ -17,7 +17,8 @@
     <script src="js/browser.min.js"></script>
     <script src="js/browser-polyfill.min.js"></script>
     <script src="js/vue.js"></script>
-    <script type="text/javascript" src="js/nav.js"></script>
+    <script src="js/public.js"></script>
+    <script type="text/babel" src="js/nav.js"></script>
 </head>
 <body>
 <div id="main">
@@ -122,7 +123,6 @@
     </div>
 </div>
 </body>
-<script src="js/public.js"></script>
 <script src="js/report.js" type="text/babel"></script>
 <script>
     $(function () {
